<resources>
    <string name="app_name">U记录</string>
    <string name="name">👤姓名:</string>
    <string name="inputname">请输入姓名</string>
    <string name="tel">📞电话:</string>
    <string name="inputtel">199****1504</string>
    <string name="email">✉️Email:</string>
    <string name="inputemail">xxx@yyyy.zzz</string>
    <string name="inputn">请输入姓名!</string>
    <string name="inputp">请输入电话号码!</string>
    <string name="inpute">请输入电子邮件地址!</string>
    <string name="title">温馨提示!</string>
    <string name="message">确定要删除吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="tip1">此记录已经删除!</string>
    <string name="tip2">你取消了该操作!</string>
    <string name="tip3">此电话号码已经存在!</string>
</resources>
