<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/show"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="5">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/namestr"
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/scale"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/scale4"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/inputname"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/telstr"
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/scale"
                    android:gravity="center"
                    android:text="@string/tel"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/scale4"
                    android:ems="10"
                    android:hint="@string/inputtel"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emailstr"
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/scale"
                    android:gravity="center"
                    android:text="@string/email"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="@dimen/zero"
                    android:layout_height="match_parent"
                    android:layout_weight="@dimen/scale4"
                    android:ems="10"
                    android:hint="@string/inputemail"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btInsert"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="@dimen/scale"
                android:background="@drawable/button_style"
                app:srcCompat="@android:drawable/ic_menu_add" />

            <ImageButton
                android:id="@+id/btUpdate"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="@dimen/scale"
                android:background="@drawable/button_style"
                app:srcCompat="@android:drawable/ic_menu_rotate" />

            <ImageButton
                android:id="@+id/btDelete"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="@dimen/scale"
                android:background="@drawable/button_style"
                app:srcCompat="@android:drawable/ic_menu_delete" />

            <ImageButton
                android:id="@+id/btCall"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="@dimen/scale"
                android:background="@drawable/button_style"
                app:srcCompat="@android:drawable/ic_menu_call" />

            <ImageButton
                android:id="@+id/btSend"
                android:layout_width="@dimen/zero"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="@dimen/scale"
                android:background="@drawable/button_style"
                app:srcCompat="@android:drawable/ic_menu_send" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>